# pybiotk

./: README.md  README.rst  diff_expr_DESeq2.R  pyproject.toml  setup.cfg  setup.py
rscripts/: diff_expr_DESeq2.R  diff_expr_plot.R  plot_chip_summary.R  plot_rep_cor.R
src/groan/: GroAn.py  expression_qc.py  filter_gene.py  merge_transcript.py  metaplot.py  peak_qc.py  read_through_peak.py  read_through_stats.py  remove_barcode_ployA.py  signal_continuity_qc.py  task.py
src/pybiotk/: skeleton.py
src/pybiotk/annodb/: anno.py  gene.py  merged_transcript.py  transcript.py
src/pybiotk/convert/: bed2bedgraph.py  fa2fastq.py  gtf2bed.py
src/pybiotk/io/: bam.py  bed.py  bw.py  fasta.py  fastq.py  gtf.py
src/pybiotk/utils/: bam_random.py  bigwigfetcher.py  ercc_parser.py  fasta_filter.py  fastq_join.py  fastq_uniq.py  fastx_rename.py  fragment_size.py  genomefetcher.py  gtf_filter.py  infer_experiment.py  merge_row.py  normalize.py  pyanno.py  read_tables.py  reverse_fastx.py  seq_random.py  subseq_analysis.py  summary_log.py  utils.py
src/ricpy/annotation/: FixGapAnno.py  FixMergeGap.py  FixUnmapAnno.py  ReadsAnno.py
src/ricpy/chimeric/: NoChimAlign.py  SplitChimeic.py
src/ricpy/structure/: analysis.py  prediction.py
src/stream/: pipe.py
tests/: conftest.py  test_skeleton.py
